smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/version.smithy
$version:1.0
$version:"1.0"
$version:'1.0'
