smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/version/invalid-version-type.smithy
// The $version control statement must have a string value, but found 0.1
$version: 0.1
